# xshade-parser

./: Cargo.toml  LICENCE  readme.md
src/: lib.rs  parser.rs
src/ast/: block_declaration.rs  export_declaration.rs  function_argument_declaration.rs  function_declaration.rs  identifier.rs  import_declaration.rs  literal_type.rs  mod.rs  operator_type.rs  program_declaration.rs  program_stage_declaration.rs  span.rs  struct_declaration.rs  struct_member_declaration.rs  type_identifier.rs
src/ast/expressions/: binary_expression.rs  call_expression.rs  field_accessor_expression.rs  index_accessor_expression.rs  infix_expression.rs  literal_expression.rs  mod.rs  negation_expression.rs  struct_field_initializer_expression.rs  struct_instantiation_expression.rs  unary_expression.rs  variable_expression.rs
src/ast/statements/: expression_statement.rs  local_statement.rs  mod.rs  return_statement.rs
src/error/: mod.rs
src/parser/: functions.rs  identifier.rs  mod.rs  structs.rs  types.rs  ws.rs
src/parser/expressions/: binary.rs  literal.rs  mod.rs  primary.rs  unary.rs  variable.rs
tests/: functions.xs  struct.xs  structs.xs  tests.rs  with-expressions.xs
