[package]
name = "xshade-parser"
description = "Parser and untyped AST for the xshade language."
license = "MIT"
repository = "https://github.com/xshade-lang/xshade-parser"
readme = "readme.md"
keywords = ["xshade", "graphics", "rendering", "vulkan", "spir-v"]
categories = ["rendering"]
version = "0.1.1"
authors = ["Andreas Fischer <vengarioth@googlemail.com>", "Marc-Anton Boehm-von Thenen <boehm.marc.anton@gmail.com>"]

[dependencies]
nom = "4.0.0"
nom_locate = "0.3.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
